Finished the basic tutorial "Building your first app"
Next step:
http://developer.android.com/training/camera/photobasics.html

--- a/banknote-app/AndroidManifest.xml
+++ b/banknote-app/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.banknote_app.DisplayMessageActivity"
+            android:label="@string/title_activity_display_message"
+            android:parentActivityName="com.example.banknote_app.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.banknote_app.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
