Button and ImageViewer, just the thumbnail is used (testing)
A button to take a snapshot and an Imageviewer were added and
they are working as expected.

--- a/banknote-app/AndroidManifest.xml
+++ b/banknote-app/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="15" />
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
